--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,33 @@
-body{
-    background-color: rgb(232, 232, 145);
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f4f4f4;
+    padding: 20px;
+    margin: 0;
 }
-h1{
-color: red;
-background-color: aquamarine;
+
+h1 {
+    color: #333;
+    text-align: center;
 }
-.intro {
-    color: black;
-    background-color: red;
-    font-family: 'Courier New', Courier, monospace;
+
+.class {
+    color: #666;
+    font-style: italic;
 }
-#first-list-item{
-    color: brown;
-    background-color: aliceblue;
+#main-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+h2{
+    color: #0066cc;
+}
+
+.website {
+    color: #0066cc;
+}
+
+ul {
+    list-style-type: square;
 }
